js/js.translator/testData/incremental/invalidation/inlineFunctionAsParamWithCrossModuleInliner/lib1/l1.5.kt
inline fun foo1() = 77
inline fun foo2() = 88
inline fun foo3() = "foo3 update"
